[package]
name = "pct-str"
version = "2.0.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["web-programming", "encoding"]
keywords = ["percent", "percent-encoded", "encode", "decode", "string"]
description = "Percent-encoded strings for URL, URI, IRI, etc."
repository = "https://github.com/timothee-haudebourg/pct-str"
documentation = "https://docs.rs/pct-str"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
utf8-decode = "1.0.1"
thiserror = "1.0.40"